@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge
 
 {{$NEXT}}
+        - add travis-ci.com badge
 
 0.26  2018-04-04 20:37:17 CST
         - Fix github url for docker badge (powerman)
